completamos pag contacto y estilizamos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,6 +20,104 @@
     <title>Contacto - Foods JS</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-md py-0 px-3 animate__animated animate__fadeInDown">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../img/logo.png" alt="">
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="menu">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">Recetas</a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="recetas-saladas.html">Recetas saladas</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="recetas-dulces.html">Recetas Dulces</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sobre-nosotros.html">Sobre Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="contacto.html">Contacto</a>
+                    </li>
+                </ul> 
+            </div>
+        </div>
+    </nav>
+
+    <main>
+        <div class="conteiner-formulario">
+            <div class="contactame">
+                <h1>Contactame</h1>
+                <p>Para cualquier consulta o propuesta podés contactarme a través de mis redes sociales o directamente a mi email.</p>
+                <p>También podés hacerlo utilizando el formulario a continuación: </p>
+                <h2 style="text-align: left;">Escribeme!</h2>
+            </div>
+
+            <div class="formulario">
+                <form action="#" autocomplete="off">
+                    <input type="text" name="nombre" placeholder="Ingresa tu nombre" class="campo">
+                    <input type="email" name="email" placeholder="Ingresa tu correo" class="campo">
+                    <textarea name="mensaje" placeholder="Ingresa tu mensaje"></textarea>
+                    <input type="submit" name="enviar" value="Enviar mensaje" class="btn-enviar">
+                </form>
+            </div>
+
+            <div class="datos">
+                <ul>
+                    <li>
+                        <a href="#">11-2222-3333
+                            <i class="bi bi-telephone-fill"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">jsfoods@gmail.com
+                            <i class="bi bi-envelope-fill"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">Calle Falsa 123, Bs. As., Argentina
+                            <i class="bi bi-geo-alt-fill"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </main>
+
+    <footer class="animate__animated animate__fadeInUp">
+        <span>(C) 2022 - JS FOODS ALL RIGHTS RESERVED.</span>
+        <img src="../img/logo-icono.png" alt="">
+        <div>
+            <a href="https://www.twitter.com/" target="_blank">
+                <i class="bi bi-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+                <i class="bi bi-instagram"></i>
+            </a>
+            <a href="https://www.facebook.com/" target="_blank">
+                <i class="bi bi-facebook"></i>
+            </a>
+            <a href="https://www.youtube.com/" target="_blank">
+                <i class="bi bi-youtube"></i>
+            </a>
+            <a href="https://www.tiktok.com/" target="_blank">
+                <i class="bi bi-tiktok"></i>
+            </a>
+        </div>
+    </footer>
     
 
     <!-- Link JS boostrap -->
