--- a/pages/recetas-dulces.html
+++ b/pages/recetas-dulces.html
@@ -20,7 +20,139 @@
     <title>Recetas dulces - Foods JS</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-md py-0 px-3 animate__animated animate__fadeInDown">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../img/logo.png" alt="">
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="menu">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link  active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">Recetas</a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="recetas-saladas.html">Recetas saladas</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item  active" href="recetas-dulces.html">Recetas Dulces</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sobre-nosotros.html">Sobre Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                </ul> 
+            </div>
+        </div>
+    </nav>
     
+    <main class="container">
+        <section class="row">
+            <h1>Recetas dulces</h1>
+            <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
+                <div class="carta">
+                    <div>
+                        <img src="../img/key-lime-pie.jpg" alt="key-lime-pie">
+                    </div>
+                    <div>
+                        <p>Key lime pie</p>
+                        <form action="risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
+                <div class="carta">
+                    <div>
+                        <img src="../img/profiterol.jpg" alt="profiterol">
+                    </div>
+                    <div>
+                        <p>Profiterol</p>
+                        <button>Ver en detalle +</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
+                <div class="carta">
+                    <div>
+                        <img src="../img/cheesecake.jpg" alt="cheesecake">
+                    </div>
+                    <div>
+                        <p>Cheesecake</p>
+                        <button>Ver en detalle +</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
+                <div class="carta">
+                    <div>
+                        <img src="../img/brownie.jpg" alt="brownie">
+                    </div>
+                    <div>
+                        <p>Brownie</p>
+                        <button>Ver en detalle +</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
+                <div class="carta">
+                    <div>
+                        <img src="../img/carrot-cake.jpg" alt="carrot-cake">
+                    </div>
+                    <div>
+                        <p>Carrot cake</p>
+                        <button>Ver en detalle +</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
+                <div class="carta">
+                    <div>
+                        <img src="../img/tiramisu.jpg" alt="tiramisu">
+                    </div>
+                    <div>
+                        <p>Tiramisu</p>
+                        <button>Ver en detalle +</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
+    <footer class="animate__animated animate__fadeInUp">
+        <span>(C) 2022 - JS FOODS ALL RIGHTS RESERVED.</span>
+        <img src="../img/logo-icono.png" alt="">
+        <div>
+            <a href="https://www.twitter.com/" target="_blank">
+                <i class="bi bi-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+                <i class="bi bi-instagram"></i>
+            </a>
+            <a href="https://www.facebook.com/" target="_blank">
+                <i class="bi bi-facebook"></i>
+            </a>
+            <a href="https://www.youtube.com/" target="_blank">
+                <i class="bi bi-youtube"></i>
+            </a>
+            <a href="https://www.tiktok.com/" target="_blank">
+                <i class="bi bi-tiktok"></i>
+            </a>
+        </div>
+    </footer>
 
     <!-- Link JS boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
