--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <footer class="animate__animated animate__fadeInUp">
         <span>(C) 2022 - JS FOODS ALL RIGHTS RESERVED.</span>
-        <img src="../img/logo-icono.png" alt="">
+        <img src="img/logo-icono.png" alt="">
         <div>
             <a href="https://www.twitter.com/" target="_blank">
                 <i class="bi bi-twitter"></i>
