sass en pag sobre nosotros

--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -59,11 +59,10 @@
     
     <!-- Info sobre mi -->
     <main>
-        <h1>Quien es Jonathan</h1>
-        
         <div class="sobremi">
-            <img src="../img/retrato.jpg" alt="fotoretrato" width="400px" height="550px">
-            <div>
+            <h1 class="titulo">Quien es Jonathan</h1>
+            <img class="retrato" src="../img/retrato.jpg" alt="fotoretrato" width="400px" height="550px">
+            <div class="info">
                 <h2>Hola!</h2>
                 <p>Si estás leyendo esto es porque seguramente querés   conocerme y saber un poco más de mi, así que acá vamos...</p>
                 <p>Mi nombre es Jonathan Ariel Solano, de profesión cocinero, sin embargo lo que mas me apasiona es la pasteleria. Comencé en el mundo de la gastronomia hace ya 4 años y senti la necesidad de compartir con ustedes mis conocimientos.</p>
