sass en toda la pagina + seo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Keywords -->
+    <meta name="keywords" content="jsfoods, comida, recetas, postres, risotto, cheesecake, salsas">
+    <!-- Description -->
+    <meta name="description" content="pagina de recetas saladas y dulces">
+
     <!-- Link a fuentes e iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -25,7 +30,7 @@
     <nav class="navbar navbar-expand-md py-0 px-3 animate__animated animate__fadeInDown">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.png" alt="">
+                <img src="img/logo.png" alt="logo y titulo">
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,28 +79,28 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="2500">
                         <a href="pages/risotto-remolacha.html">
-                            <img src="img/cheesecake.jpg" class="d-block w-100" alt="...">
+                            <img src="img/cheesecake.jpg" class="d-block w-100" alt="cheesecake">
                         </a>
                         <div class="carousel-caption d-none d-sm-block">
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2500">
-                        <img src="img/risotto-remolacha.jpg" class="d-block w-100" alt="...">
+                        <img src="img/risotto-remolacha.jpg" class="d-block w-100" alt="risotto remolacha">
                         <div class="carousel-caption d-none d-sm-block">
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2500">
-                        <img src="img/key-lime-pie.jpg" class="d-block w-100" alt="...">
+                        <img src="img/key-lime-pie.jpg" class="d-block w-100" alt="key lime pie">
                         <div class="carousel-caption d-none d-sm-block">
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2500">
-                        <img src="img/pollo-al-curry.jpg" class="d-block w-100" alt="...">
+                        <img src="img/pollo-al-curry.jpg" class="d-block w-100" alt="pollo al curry">
                         <div class="carousel-caption d-none d-sm-block">
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2500">
-                        <img src="img/carrot-cake.jpg" class="d-block w-100" alt="...">
+                        <img src="img/carrot-cake.jpg" class="d-block w-100" alt="carrot cake">
                         <div class="carousel-caption d-none d-sm-block">
                         </div>
                     </div>
@@ -114,7 +119,7 @@
 
     <footer class="animate__animated animate__fadeInUp">
         <span>(C) 2022 - JS FOODS ALL RIGHTS RESERVED.</span>
-        <img src="img/logo-icono.png" alt="">
+        <img src="img/logo-icono.png" alt="logo">
         <div>
             <a href="https://www.twitter.com/" target="_blank">
                 <i class="bi bi-twitter"></i>
