--- a/pages/recetas-saladas.html
+++ b/pages/recetas-saladas.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Keywords -->
+    <meta name="keywords" content="jsfoods, comida, recetas, postres, risotto, cheesecake, salsas">
+    <!-- Description -->
+    <meta name="description" content="pagina de recetas saladas">
+
     <!-- Link a fuentes e iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -23,7 +28,7 @@
     <nav class="navbar navbar-expand-md py-0 px-3 animate__animated animate__fadeInDown">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img src="../img/logo.png" alt="">
+                <img src="../img/logo.png" alt="logo y titulo">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +69,7 @@
             <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
                 <div class="carta">
                     <div>
-                        <img src="../img/risotto-remolacha.jpg" alt="risotto-remolacha">
+                        <img src="../img/risotto-remolacha.jpg" alt="risotto remolacha">
                     </div>
                     <div>
                         <p>Risotto de remolacha</p>
@@ -77,7 +82,7 @@
             <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
                 <div class="carta">
                     <div>
-                        <img src="../img/pollo-al-curry.jpg" alt="pollo-al-curry">
+                        <img src="../img/pollo-al-curry.jpg" alt="pollo al curry">
                     </div>
                     <div>
                         <p>Pollo al curry</p>
@@ -99,7 +104,7 @@
             <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
                 <div class="carta">
                     <div>
-                        <img src="../img/ternera-al-vino.jpg" alt="ternera-al-vino">
+                        <img src="../img/ternera-al-vino.jpg" alt="ternera al vino">
                     </div>
                     <div>
                         <p>Ternera al vino</p>
@@ -121,7 +126,7 @@
             <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
                 <div class="carta">
                     <div>
-                        <img src="../img/ravioles-salsa-rosa.jpg" alt="ravioles-salsa-rosa">
+                        <img src="../img/ravioles-salsa-rosa.jpg" alt="ravioles salsa rosa">
                     </div>
                     <div>
                         <p>Ravioles en salsa rosa</p>
@@ -135,7 +140,7 @@
     
     <footer class="animate__animated animate__fadeInUp">
         <span>(C) 2022 - JS FOODS ALL RIGHTS RESERVED.</span>
-        <img src="../img/logo-icono.png" alt="">
+        <img src="../img/logo-icono.png" alt="logo">
         <div>
             <a href="https://www.twitter.com/" target="_blank">
                 <i class="bi bi-twitter"></i>
