--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -80,7 +80,9 @@
 
     <footer class="animate__animated animate__fadeInUp">
         <span>(C) 2022 - JS FOODS ALL RIGHTS RESERVED.</span>
-        <img src="../img/logo-icono.png" alt="logo">
+        <a href="index.html">
+            <img src="img/logo-icono.png" alt="logo">
+        </a>
         <div>
             <a href="https://www.twitter.com/" target="_blank">
                 <i class="bi bi-twitter"></i>
