terminando detalles de proyecto final

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <!-- Keywords -->
     <meta name="keywords" content="jsfoods, comida, recetas, postres, risotto, cheesecake, salsas">
     <!-- Description -->
-    <meta name="description" content="pagina de recetas saladas y dulces, comunicate conmigo">
+    <meta name="description" content="Para cualquier consulta o propuesta podés contactarme a través de mis redes sociales o directamente a mi email.">
 
     <!-- Link a fuentes e iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -74,7 +74,7 @@
             <div class="formulario">
                 <form action="#" autocomplete="off">
                     <input type="text" name="nombre" placeholder="Ingresa tu nombre" class="campo">
-                    <input type="email" name="email" placeholder="Ingresa tu correo" class="campo">
+                    <input type="email" name="email" placeholder="Ingresa tu correo" class="campo" required>
                     <textarea name="mensaje" placeholder="Ingresa tu mensaje"></textarea>
                     <input type="submit" name="enviar" value="Enviar mensaje" class="btn-enviar">
                 </form>
@@ -104,8 +104,8 @@
 
     <footer class="animate__animated animate__fadeInUp">
         <span>(C) 2022 - JS FOODS ALL RIGHTS RESERVED.</span>
-        <a href="index.html">
-            <img src="img/logo-icono.png" alt="logo">
+        <a href="../index.html">
+            <img src="../img/logo-icono.png" alt="logo">
         </a>
         <div>
             <a href="https://www.twitter.com/" target="_blank">
