--- a/pages/recetas-saladas.html
+++ b/pages/recetas-saladas.html
@@ -8,7 +8,7 @@
     <!-- Keywords -->
     <meta name="keywords" content="jsfoods, comida, recetas, postres, risotto, cheesecake, salsas">
     <!-- Description -->
-    <meta name="description" content="pagina de recetas saladas">
+    <meta name="description" content="Recetas saladas. Descubri las recetas que tenemos para vos.">
 
     <!-- Link a fuentes e iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -86,7 +86,9 @@
                     </div>
                     <div>
                         <p>Pollo al curry</p>
-                        <button>Ver en detalle +</button>
+                        <form action="risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -97,7 +99,9 @@
                     </div>
                     <div>
                         <p>Falafel</p>
-                        <button>Ver en detalle +</button>
+                        <form action="risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -108,7 +112,9 @@
                     </div>
                     <div>
                         <p>Ternera al vino</p>
-                        <button>Ver en detalle +</button>
+                        <form action="risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -119,7 +125,9 @@
                     </div>
                     <div>
                         <p>Ratatouille</p>
-                        <button>Ver en detalle +</button>
+                        <form action="risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -130,7 +138,9 @@
                     </div>
                     <div>
                         <p>Ravioles en salsa rosa</p>
-                        <button>Ver en detalle +</button>
+                        <form action="risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -140,8 +150,8 @@
     
     <footer class="animate__animated animate__fadeInUp">
         <span>(C) 2022 - JS FOODS ALL RIGHTS RESERVED.</span>
-        <a href="index.html">
-            <img src="img/logo-icono.png" alt="logo">
+        <a href="../index.html">
+            <img src="../img/logo-icono.png" alt="logo">
         </a>
         <div>
             <a href="https://www.twitter.com/" target="_blank">
