--- a/pages/risotto-remolacha.html
+++ b/pages/risotto-remolacha.html
@@ -8,7 +8,15 @@
     <!-- Keywords -->
     <meta name="keywords" content="jsfoods, comida, recetas, postres, risotto, cheesecake, salsas">
     <!-- Description -->
-    <meta name="description" content="pagina de la receta detallada con sus ingredientes y proceso">
+    <meta name="description" content="Risotto de remolacha. Detalles de la receta con sus ingredientes y proceso. 
+    Cebolla (1)
+    Aceite de oliva
+    Vino blanco (100ml)
+    Arroz arborio o carnaroli (300g)
+    Remolacha cocida (2)
+    Cald de pollo o verdura (1l aprox)
+    Manteca (50g)
+    Queso parmesano rallado (80g)">
 
     <!-- Link a fuentes e iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -102,8 +110,8 @@
     
     <footer class="animate__animated animate__fadeInUp">
         <span>(C) 2022 - JS FOODS ALL RIGHTS RESERVED.</span>
-        <a href="index.html">
-            <img src="img/logo-icono.png" alt="logo">
+        <a href="../index.html">
+            <img src="../img/logo-icono.png" alt="logo">
         </a>
         <div>
             <a href="https://www.twitter.com/" target="_blank">
