--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Keywords -->
     <meta name="keywords" content="jsfoods, comida, recetas, postres, risotto, cheesecake, salsas">
     <!-- Description -->
-    <meta name="description" content="pagina de recetas saladas y dulces">
+    <meta name="description" content="Descubrí en JSFoods recetas fáciles y rápidas para preparar en casa, tanto saladas como dulces.">
 
     <!-- Link a fuentes e iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -113,6 +113,47 @@
                     <span class="carousel-control-next-icon control-slider" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
+                <div class="carta">
+                    <div>
+                        <img src="img/risotto-remolacha.jpg" alt="risotto remolacha">
+                    </div>
+                    <div>
+                        <p>Risotto de remolacha</p>
+                        <form action="pages/risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
+                <div class="carta">
+                    <div>
+                        <img src="img/carrot-cake.jpg" alt="carrot cake">
+                    </div>
+                    <div>
+                        <p>Carrot cake</p>
+                        <form action="pages/risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4 col-md-6 d-flex justify-content-center">
+                <div class="carta">
+                    <div>
+                        <img src="img/pollo-al-curry.jpg" alt="pollo al curry">
+                    </div>
+                    <div>
+                        <p>Pollo al curry</p>
+                        <form action="pages/risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
