--- a/pages/recetas-dulces.html
+++ b/pages/recetas-dulces.html
@@ -8,7 +8,7 @@
     <!-- Keywords -->
     <meta name="keywords" content="jsfoods, comida, recetas, postres, risotto, cheesecake, salsas">
     <!-- Description -->
-    <meta name="description" content="pagina de recetas dulces">
+    <meta name="description" content="Recetas dulces. Descubri la pasteleria que tenemos para vos.">
 
     <!-- Link a fuentes e iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -73,7 +73,9 @@
                     <div>
                         <p>Key lime pie</p>
                         <form action="risotto-remolacha.html">
-                            <button>Ver en detalle +</button>
+                            <form action="risotto-remolacha.html">
+                                <button>Ver en detalle +</button>
+                            </form>
                         </form>
                     </div>
                 </div>
@@ -85,7 +87,9 @@
                     </div>
                     <div>
                         <p>Profiterol</p>
-                        <button>Ver en detalle +</button>
+                        <form action="risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -96,7 +100,9 @@
                     </div>
                     <div>
                         <p>Cheesecake</p>
-                        <button>Ver en detalle +</button>
+                        <form action="risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -107,7 +113,9 @@
                     </div>
                     <div>
                         <p>Brownie</p>
-                        <button>Ver en detalle +</button>
+                        <form action="risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -118,7 +126,9 @@
                     </div>
                     <div>
                         <p>Carrot cake</p>
-                        <button>Ver en detalle +</button>
+                        <form action="risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -129,7 +139,9 @@
                     </div>
                     <div>
                         <p>Tiramisu</p>
-                        <button>Ver en detalle +</button>
+                        <form action="risotto-remolacha.html">
+                            <button>Ver en detalle +</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -139,8 +151,8 @@
 
     <footer class="animate__animated animate__fadeInUp">
         <span>(C) 2022 - JS FOODS ALL RIGHTS RESERVED.</span>
-        <a href="index.html">
-            <img src="img/logo-icono.png" alt="logo">
+        <a href="../index.html">
+            <img src="../img/logo-icono.png" alt="logo">
         </a>
         <div>
             <a href="https://www.twitter.com/" target="_blank">
