--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -8,7 +8,7 @@
     <!-- Keywords -->
     <meta name="keywords" content="jsfoods, comida, recetas, postres, risotto, cheesecake, salsas">
     <!-- Description -->
-    <meta name="description" content="pagina de recetas saladas y dulces, conoceme">
+    <meta name="description" content="Quien es Jonathan? Aca podras conocer un poco de mi historia.">
 
     <!-- Link a fuentes e iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -80,8 +80,8 @@
 
     <footer class="animate__animated animate__fadeInUp">
         <span>(C) 2022 - JS FOODS ALL RIGHTS RESERVED.</span>
-        <a href="index.html">
-            <img src="img/logo-icono.png" alt="logo">
+        <a href="../index.html">
+            <img src="../img/logo-icono.png" alt="logo">
         </a>
         <div>
             <a href="https://www.twitter.com/" target="_blank">
